--- a/AppTFG/AppTFG/Paginas/PaginaActividad.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaActividad.xaml
@@ -38,7 +38,7 @@
                 </Frame>
                 <Button Grid.Row="2" Text="Iniciar actividad" TextColor="{DynamicResource PrimaryTextColor}" BackgroundColor="{DynamicResource PageBackgroundColor}"/>
             </Grid>
-            <ActivityIndicator x:Name="indicator" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
+            <ActivityIndicator x:Name="indicator" Color="Transparent" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
         </StackLayout>
     </ScrollView>
 </ContentPage>
