--- a/AppTFG/AppTFG/Paginas/PaginaVistaFoto.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaFoto.xaml
@@ -19,7 +19,7 @@
                            FontFamily="BSDRegular"  Grid.Row="1" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Large"/>
                     </Grid>
                 </StackLayout>
-                <ActivityIndicator x:Name="indicator" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center"/>
+                <ActivityIndicator x:Name="indicator" Color="Transparent" VerticalOptions="Center" HorizontalOptions="Center"/>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
