--- a/AppTFG/AppTFG/Paginas/PaginaVistaListaFotos.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaListaFotos.xaml
@@ -8,7 +8,7 @@
             <ContentPage.Content>
                 <ScrollView VerticalScrollBarVisibility="Never">
                         <StackLayout>
-                            <ActivityIndicator x:Name="indicator" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
+                            <ActivityIndicator x:Name="indicator" Color="Transparent" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
                             <CollectionView x:Name="clvFotosPueblo" ItemsSource="{Binding Fotos}" ItemsLayout="VerticalGrid, 3">
                                 <CollectionView.ItemTemplate>
                                     <DataTemplate>
@@ -37,7 +37,7 @@
             <ContentPage.Content>
                 <ScrollView VerticalScrollBarVisibility="Never">
                     <StackLayout Spacing="0" Orientation="Vertical" Padding="0" >
-                        <ActivityIndicator x:Name="indicador" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
+                        <ActivityIndicator x:Name="indicador" Color="Transparent" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
                         <ListView x:Name="lsvFotosPueblo" ItemsSource="{Binding Fotos}" ItemSelected="LsvFotosPueblo_ItemSelected" HasUnevenRows="True">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
