--- a/AppTFG/AppTFG/Temas/TemaClaro.xaml
+++ b/AppTFG/AppTFG/Temas/TemaClaro.xaml
@@ -9,7 +9,9 @@
     <Color x:Key="SecondaryColor">Black</Color>
     <Color x:Key="PrimaryTextColor">Black</Color>
     <Color x:Key="SecondaryTextColor">White</Color>
-    <Color x:Key="TertiaryTextColor">Gray</Color>
+    <Color x:Key="TertiaryTextColor">LightGray</Color>
+    <Color x:Key="BotonesBarraAbajo">Gray</Color>
+    <Color x:Key="BotonSeleccionadoBarraAbajo">Black</Color>
     <Color x:Key="TransparentColor">Transparent</Color>
 
 </ResourceDictionary>
