Pantalla de inicio correcta.

--- a/AppTFG/AppTFG/Paginas/ListaActividades.xaml
+++ b/AppTFG/AppTFG/Paginas/ListaActividades.xaml
@@ -6,6 +6,7 @@
              BackgroundColor="{DynamicResource PageBackgroundColor}">
     <ContentPage.Content>
         <StackLayout>
+            <ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center"/>
             <ListView x:Name="lsvActividades" ItemsSource="{Binding Actividades}" ItemSelected="LsvActividades_ItemSelected" HasUnevenRows="True">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -18,7 +19,6 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <ActivityIndicator x:Name="indicator" Color="Transparent" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
