--- a/AppTFG/AppTFG/Paginas/InicioPage.xaml
+++ b/AppTFG/AppTFG/Paginas/InicioPage.xaml
@@ -1,14 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:pv="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView" xmlns:vm="clr-namespace:AppTFG.VistaModelos"
              x:Class="AppTFG.Paginas.InicioPage"
              Title="{Binding Nombre, StringFormat='Bienvenido, {0}'}"
              NavigationPage.HasBackButton="False"
-             BackgroundColor="LightGray">
+             BackgroundColor="{DynamicResource PageBackgroundColor}">
+
+    <ContentPage.BindingContext>
+        <vm:InicioPageView/>
+    </ContentPage.BindingContext>
 
     <ContentPage.Content>
         <StackLayout HorizontalOptions="FillAndExpand" Padding="5,5,5,5">
-            <ActivityIndicator x:Name="indicator" Color="Transparent" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
+            <ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center"/>
             <!--Frame del Pueblo donde se ve la información más general-->
             <Frame CornerRadius="20" HorizontalOptions="StartAndExpand" Padding="0,0,0,0" BackgroundColor="{DynamicResource PageBackgroundColor}">
                 <Grid RowSpacing="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
@@ -41,183 +46,58 @@
                 </Grid>
             </Frame>
             <StackLayout Orientation="Vertical">
-                <Label Text="Rutas añadidas" FontSize="Large" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
-                <CollectionView x:Name="clvRutas" ItemsSource="{Binding Rutas}">
+                
+                <Label Text="Rutas añadidas" FontSize="Large" FontFamily="BSDSemiBold" TextColor="{DynamicResource PrimaryTextColor}"/>
+                <CollectionView x:Name="clvRutas" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" 
+                                HorizontalScrollBarVisibility="Never"
+                        ItemsSource="{Binding Rutas}" SelectedItem="{Binding RutaSeleccionada}"
+                        SelectionMode="Single" SelectionChangedCommand="{Binding SelectionCommand}">
                     <CollectionView.ItemsLayout>
-                        <LinearItemsLayout Orientation="Horizontal" />
+                        <LinearItemsLayout Orientation="Horizontal" ItemSpacing="20"/>
                     </CollectionView.ItemsLayout>
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Grid Padding="1" ColumnSpacing="0" RowSpacing="0">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="2*" />
-                                    <RowDefinition Height="*" />
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="200" />
-                                </Grid.ColumnDefinitions>
-                                <Image Grid.Row="0" Grid.Column="0" Source="{Binding ImagenPrincipal}" 
-                                           Aspect="AspectFill" 
-                                           HorizontalOptions="Fill" 
-                                           VerticalOptions="Fill"/>
-                                <Label Grid.Row="1" Grid.Column="0" Text="{Binding Nombre}" LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="Title" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Start" Margin="12,5,12,1" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
+                            <Grid WidthRequest="135" HeightRequest="195" Padding="0,10">
+                                <pv:PancakeView HasShadow="True" BorderThickness="1" BorderColor="#825060" CornerRadius="23" 
+                                                HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                    <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                        <Image Source="{Binding ImagenPrincipal}" Aspect="AspectFill" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
+                                        <pv:PancakeView BackgroundColor="{DynamicResource PageBackgroundColor}" Padding="10" HorizontalOptions="FillAndExpand" VerticalOptions="End">
+                                            <Label Text="{Binding Nombre}" LineBreakMode="NoWrap" VerticalOptions="Center" FontSize="14" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Start" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
+                                        </pv:PancakeView>
+                                    </Grid>
+                                </pv:PancakeView>
                             </Grid>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
-                <Label Text="Actividades añadidas" FontSize="Large" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
-                <CollectionView x:Name="clvActividades" ItemsSource="{Binding Actividades}">
+
+                <Label Text="Actividades añadidas" FontSize="Large" FontFamily="BSDSemiBold" TextColor="{DynamicResource PrimaryTextColor}"/>
+                <CollectionView x:Name="clvActividades" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" 
+                                HorizontalScrollBarVisibility="Never"
+                        ItemsSource="{Binding Actividades}" SelectedItem="{Binding ActividadSeleccionada}"
+                        SelectionMode="Single" SelectionChangedCommand="{Binding SelectionCommand}">
                     <CollectionView.ItemsLayout>
-                        <LinearItemsLayout Orientation="Horizontal" />
+                        <LinearItemsLayout Orientation="Horizontal" ItemSpacing="20"/>
                     </CollectionView.ItemsLayout>
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Grid Padding="1" ColumnSpacing="40" RowSpacing="0">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="2*" />
-                                    <RowDefinition Height="*" />
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="200" />
-                                </Grid.ColumnDefinitions>
-                                <Image Grid.Row="0" Grid.Column="0" Source="{Binding ImagenPrincipal}" 
-                                           Aspect="AspectFill" 
-                                           HorizontalOptions="Fill" 
-                                           VerticalOptions="Fill"/>
-                                <Label Grid.Row="1" Grid.Column="0" Text="{Binding Nombre}" LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="Title" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontFamily="BSDRegular"/>
+                            <Grid WidthRequest="135" HeightRequest="195" Padding="0,10">
+                                <pv:PancakeView HasShadow="True" BorderThickness="1" BorderColor="#825060" CornerRadius="23" 
+                                                HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                    <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                        <Image Source="{Binding ImagenPrincipal}" Aspect="AspectFill" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
+                                        <pv:PancakeView BackgroundColor="{DynamicResource PageBackgroundColor}" Padding="10" HorizontalOptions="FillAndExpand" VerticalOptions="End">
+                                            <Label Text="{Binding Nombre}" LineBreakMode="NoWrap" VerticalOptions="Center" FontSize="14" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Start" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
+                                        </pv:PancakeView>
+                                    </Grid>
+                                </pv:PancakeView>
                             </Grid>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
+                
             </StackLayout>
-            <!--Frames de las rutas--><!--
-            <Grid ColumnSpacing="5" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Frame Grid.Column="0" Grid.Row="0" CornerRadius="10" HorizontalOptions="FillAndExpand" Padding="0,0,0,0" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                    <Grid RowSpacing="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="50"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Label Grid.Row="0" Text="Rutas en activo" BackgroundColor="Salmon" HorizontalTextAlignment="Center" TextColor="{DynamicResource PrimaryTextColor}"
-                           VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" FontSize="Large" FontFamily="BSDSemiBold"/>
-                        <Label Grid.Row="1" Text="Vídeos" HorizontalOptions="Center" VerticalOptions="Center"  FontAttributes="Bold" FontSize="Large" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
-                    </Grid>
-                </Frame>
-                <Frame Grid.Column="1" Grid.Row="0" CornerRadius="10" HorizontalOptions="FillAndExpand" Padding="0,0,0,0" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                    <Grid RowSpacing="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="50"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Label Grid.Row="0" Text="Ruta más realizada" BackgroundColor="Salmon" HorizontalTextAlignment="Center" FontFamily="BSDSemiBold" TextColor="{DynamicResource PrimaryTextColor}"
-                           VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" FontSize="Large"/>
-                        <Label Grid.Row="1" Text="Vídeos" HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold" FontSize="Large" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
-                    </Grid>
-                </Frame>
-            </Grid>
-            --><!--Frames de las actividades--><!--
-            <Grid ColumnSpacing="5" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Frame Grid.Column="0" Grid.Row="0" CornerRadius="10" HorizontalOptions="FillAndExpand" Padding="0,0,0,0" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                    <Grid RowSpacing="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="50"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Label Grid.Row="0" Text="Actividades en activo" BackgroundColor="Salmon" HorizontalTextAlignment="Center" TextColor="{DynamicResource PrimaryTextColor}"
-                           VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" FontSize="Large" FontFamily="BSDSemiBold"/>
-                        <Label Grid.Row="1" Text="Actividades" HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold" FontSize="Large" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
-                    </Grid>
-                </Frame>
-                <Frame Grid.Column="1" Grid.Row="0" CornerRadius="10" HorizontalOptions="FillAndExpand" Padding="0,0,0,0" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                    <Grid RowSpacing="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="50"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Label Grid.Row="0" Text="Actividad más realizada" BackgroundColor="Salmon" HorizontalTextAlignment="Center" FontFamily="BSDSemiBold" TextColor="{DynamicResource PrimaryTextColor}"
-                           VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" FontSize="Large"/>
-                        <Label Grid.Row="1" Text="Actividades" HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold" FontSize="Large" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
-                    </Grid>
-                </Frame>
-            </Grid>
-            --><!--Frames de las fotos--><!--
-            <Grid ColumnSpacing="5" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Frame Grid.Column="0" Grid.Row="0" CornerRadius="10" HorizontalOptions="FillAndExpand" Padding="0,0,0,0" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                    <Grid RowSpacing="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="50"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Label Grid.Row="0" Text="Fotos subidas" BackgroundColor="Salmon" HorizontalTextAlignment="Center" TextColor="{DynamicResource PrimaryTextColor}"
-                           VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" FontSize="Large" FontFamily="BSDSemiBold"/>
-                        <Label Grid.Row="1" Text="Fotos" HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold" FontSize="Large" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
-                    </Grid>
-                </Frame>
-                <Frame Grid.Column="1" Grid.Row="0" CornerRadius="10" HorizontalOptions="FillAndExpand" Padding="0,0,0,0" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                    <Grid RowSpacing="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="50"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Label Grid.Row="0" Text="Foto más vista" BackgroundColor="Salmon" HorizontalTextAlignment="Center" FontFamily="BSDSemiBold" TextColor="{DynamicResource PrimaryTextColor}"
-                           VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" FontSize="Large"/>
-                        <Label Grid.Row="1" Text="Fotos" HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold" FontSize="Large" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
-                    </Grid>
-                </Frame>
-            </Grid>
-            --><!--Frames de los vídeos--><!--
-            <Grid ColumnSpacing="5" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Frame Grid.Column="0" Grid.Row="0" CornerRadius="10" HorizontalOptions="FillAndExpand" Padding="0,0,0,0" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                    <Grid RowSpacing="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="50"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Label Grid.Row="0" Text="Vídeos subidos" BackgroundColor="Salmon" HorizontalTextAlignment="Center" TextColor="{DynamicResource PrimaryTextColor}"
-                           VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" FontSize="Large" FontFamily="BSDSemiBold"/>
-                        <Label Grid.Row="1" Text="Vídeos" HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold" FontSize="Large" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
-                    </Grid>
-                </Frame>
-                <Frame Grid.Column="1" Grid.Row="0" CornerRadius="10" HorizontalOptions="FillAndExpand" Padding="0,0,0,0" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                    <Grid RowSpacing="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="50"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Label Grid.Row="0" Text="Vídeo más visto" BackgroundColor="Salmon" HorizontalTextAlignment="Center" FontFamily="BSDSemiBold" TextColor="{DynamicResource PrimaryTextColor}"
-                           VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" FontSize="Large"/>
-                        <Label Grid.Row="1" Text="Vídeos" HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold" FontSize="Large" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
-                    </Grid>
-                </Frame>
-            </Grid>-->
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
