--- a/AppTFG/AppTFG/Paginas/ListaVideosPueblo.xaml
+++ b/AppTFG/AppTFG/Paginas/ListaVideosPueblo.xaml
@@ -9,7 +9,7 @@
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
-            <ActivityIndicator x:Name="indicator" Color="Transparent" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
+            <ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center"/>
             <ScrollView VerticalScrollBarVisibility="Never">
                 <ListView x:Name="lsvVideosPueblo" ItemsSource="{Binding Videos}" ItemSelected="LsvVideosPueblo_ItemSelected" HasUnevenRows="True">
                     <ListView.ItemTemplate>
