--- a/AppTFG/AppTFG/Paginas/SubirVideo.xaml
+++ b/AppTFG/AppTFG/Paginas/SubirVideo.xaml
@@ -8,6 +8,7 @@
     <ContentPage.Content>
         <ScrollView VerticalScrollBarVisibility="Never">
             <StackLayout>
+                <!--<ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center" WidthRequest="0"/>-->
                 <StackLayout Padding="15">
                     <Grid RowSpacing="0">
                         <Grid.RowDefinitions>
@@ -107,8 +108,6 @@
                             HorizontalOptions="Center" Clicked="BtnVideo_Clicked" Grid.Row="2"/>
                     </Grid>
                 </StackLayout>
-
-                <ActivityIndicator x:Name="indicator" Color="Transparent" VerticalOptions="Center" HorizontalOptions="Center" WidthRequest="0"/>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
