--- a/AppTFG/AppTFG/Paginas/Comercios.xaml
+++ b/AppTFG/AppTFG/Paginas/Comercios.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             x:Class="AppTFG.Paginas.Comentarios"
-             Title="Comentarios"
+             x:Class="AppTFG.Paginas.Comercios"
+             Title="Comercios"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
     <ContentPage.Content>
