--- a/AppTFG/AppTFG/Paginas/ListaActividades.xaml
+++ b/AppTFG/AppTFG/Paginas/ListaActividades.xaml
@@ -6,7 +6,7 @@
              BackgroundColor="{DynamicResource PageBackgroundColor}">
     <ContentPage.Content>
         <StackLayout>
-            <ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center"/>
+            <!--<ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center"/>-->
             <ListView x:Name="lsvActividades" ItemsSource="{Binding Actividades}" ItemSelected="LsvActividades_ItemSelected" HasUnevenRows="True">
                 <ListView.ItemTemplate>
                     <DataTemplate>
