--- a/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
@@ -8,8 +8,8 @@
         <ToolbarItem x:Name="btnRegistrar" Text="Guardar" Order="Primary" Priority="0" Clicked="BtnRegistrar_Clicked"/>
         <ToolbarItem x:Name="btnEliminar" Text="Eliminar" Order="Primary" Priority="1" Clicked="BtnEliminar_Clicked"/>
     </ContentPage.ToolbarItems>
-    <StackLayout>
-        <ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center"/>
+    <StackLayout BackgroundColor="{DynamicResource PageBackgroundColor}">
+        <!--<ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center"/>-->
         <ScrollView Margin="0" VerticalScrollBarVisibility="Never">
             <StackLayout Spacing="0" Padding="0" Margin="0">
                 <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="-15">
@@ -20,8 +20,8 @@
                     </Grid.RowDefinitions>
                     <Image Grid.Row="0" x:Name="imgPueblo" Source="{Binding ImagenPrincipal}"
                                Aspect="AspectFill" HeightRequest="150"/>
-                    <Frame Grid.Row="1" CornerRadius="15" Padding="0">
-                        <StackLayout>
+                    <Frame Grid.Row="1" CornerRadius="15" Padding="0" BackgroundColor="{DynamicResource PageBackgroundColor}">
+                        <StackLayout BackgroundColor="{DynamicResource PageBackgroundColor}">
                             <Grid HorizontalOptions="StartAndExpand" VerticalOptions="Start" ColumnSpacing="5" Margin="10">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="2*"/>
@@ -50,47 +50,29 @@
                                     BackgroundColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular"
                                     TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnRutas_Clicked" Grid.Column="0" Grid.Row="0" BorderColor="Gray"/>
-                                <Label Text="Rutas" FontSize="Large" Grid.Column="0" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
+                                <Label Text="Rutas" FontSize="Large" Grid.Column="0" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
                                 <Button x:Name="btnActividades" Text="Acts"
                                     BackgroundColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular"
                                     TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnActividades_Clicked" Grid.Column="1" Grid.Row="0" BorderColor="Gray"/>
-                                <Label Text="Actividades" FontSize="Large" Grid.Column="1" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
+                                <Label Text="Actividades" FontSize="Large" Grid.Column="1" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
                                 <Button x:Name="btnFotos" Text="Fotos"
                                     BackgroundColor="{DynamicResource PageBackgroundColor}" 
                                     TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="FillAndExpand" FontFamily="BSDRegular"
                                     Clicked="BtnFotos_Clicked" Grid.Column="2" Grid.Row="0" BorderColor="Gray"/>
-                                <Label Text="Fotos" FontSize="Large" Grid.Column="2" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
+                                <Label Text="Fotos" FontSize="Large" Grid.Column="2" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
                                 <Button x:Name="btnVideo" Text="Vídeos" 
                                     BackgroundColor="{DynamicResource PageBackgroundColor}" 
                                     TextColor="{DynamicResource PrimaryTextColor}"  HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnVideo_Clicked" Grid.Column="3" Grid.Row="0" BorderColor="Gray" FontFamily="BSDRegular"/>
-                                <Label Text="Vídeos" FontSize="Large"  Grid.Column="3" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
+                                <Label Text="Vídeos" FontSize="Large"  Grid.Column="3" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
                             </Grid>
                             <Editor x:Name="txtDescripcion" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Descripcion}" 
                                 Placeholder="Ingresa una descripción del pueblo"  Margin="10, 0, 10, 25" AutoSize="TextChanges"
                                 PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Large" FontFamily="BSDRegular"/>
                         </StackLayout>
                     </Frame>
-                    <!--<Label Text="Coordenadas del pueblo(Latitud, Longitud): " TextColor="Gray" FontSize="Medium"/>
-                        <Entry x:Name="txtCoordenadaX" TextColor="DarkGray" Text="{Binding CoordenadaX}" 
-                                   Placeholder="Por ejemplo: 37.003000" 
-                                   PlaceholderColor="LightGray" BackgroundColor="White" FontSize="Medium"/>
-                        <Entry x:Name="txtCoordenadaY" TextColor="DarkGray" Text="{Binding CoordenadaY}" 
-                                   Placeholder="Por ejemplo: -37.003000" 
-                                   PlaceholderColor="LightGray" BackgroundColor="White" FontSize="Medium"/>
-                        <Button x:Name="btnMapa" Text="Cargar mapa con coordenadas" 
-                                        BackgroundColor="White" Margin="10" 
-                                        TextColor="Gray" WidthRequest="150"  
-                                        HorizontalOptions="Center" />
-                        -->
-                    <!--Clicked="BtnCrearMapa_Clicked"-->
-                    <!--
-                    </StackLayout>
-                </StackLayout>
-            </ScrollView>-->
                     <StackLayout Grid.Row="2" x:Name="stackMapa" Margin="0, 0, 0, 0" HeightRequest="-1" WidthRequest="-1">
-                        <maps:Map x:Name="map" WidthRequest="-1" HeightRequest="300" HasScrollEnabled="True"/>
                         <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="5">
                             <Button Text="Street" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PageBackgroundColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular"/>
                             <Button Text="Satélite" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PageBackgroundColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular"/>
