--- a/AppTFG/AppTFG/Paginas/PaginaVistaFoto.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaFoto.xaml
@@ -6,6 +6,7 @@
     <ContentPage.Content>
         <ScrollView VerticalScrollBarVisibility="Never">
             <StackLayout>
+                <!--<ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>-->
                 <StackLayout Padding="15">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -19,7 +20,6 @@
                            FontFamily="BSDRegular"  Grid.Row="1" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Large"/>
                     </Grid>
                 </StackLayout>
-                <ActivityIndicator x:Name="indicator" Color="Transparent" VerticalOptions="Center" HorizontalOptions="Center"/>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
