--- a/AppTFG/AppTFG/Paginas/SubirFoto.xaml
+++ b/AppTFG/AppTFG/Paginas/SubirFoto.xaml
@@ -6,6 +6,7 @@
     <ContentPage.Content>
         <ScrollView VerticalScrollBarVisibility="Never">
             <StackLayout>
+                <!--<ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center"/>-->
                 <StackLayout Padding="15">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -25,8 +26,6 @@
                             HorizontalOptions="Center" Clicked="BtnImagen_Clicked" Grid.Row="2"/>
                     </Grid>
                 </StackLayout>
-
-                <ActivityIndicator x:Name="indicator" Color="Transparent" VerticalOptions="Center" HorizontalOptions="Center"/>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
